--- a/Scorewriter/app/src/main/AndroidManifest.xml
+++ b/Scorewriter/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="org.wit.scorewriter">
 
     <application
+        android:name="org.wit.scorewriter.main.MainApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
