--- a/Scorewriter/app/build.gradle
+++ b/Scorewriter/app/build.gradle
@@ -33,6 +33,10 @@ android {
     }
 }
 
+androidExtensions {
+    experimental = true
+}
+
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
